2004-03-20 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b133

	* Bugfix: Allow users to have blank captions on upload.  This
		broke when the ability to caption from file date stamp
		was added.

2004-03-20 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b132

	* Change: Task #84759, Patch #781169, RFE #411261. Add watermarking
		support (visible watermarks by overlaying an image)

2004-03-21 Christian Mohn <ch-moh@online.no> 1.4.3-cvs-b131

        * Change: Added LimitRequestBody setting for Apache2 in
		  setup/php_value.template (sapi_apache2.c module)
		  This is patch #920442 - Thanks to Niels Basjes
		  for submitting

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b130

	* Bugfix: Removed lines in slideshow that were sent before header. 
		  They caused slideshow to display errors when embedded.

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b129

	* Changed:  Replaced some includes/requirements of Variables.

2004-03-21 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b128

	* Change: Tweaked add_photos*
		  - Bugfix: Selectboxes for count of inputboxes.
		  - Fixed HTML errors.
		  - Tidied html outout up.
		  - Beatified output.
		  - Some rewordings.

	* Bugfix: config.php was loaded to late in Config Wizard.
		  So the language was set to Browserlanguage everytime.

	* Change: Replaced some includes/requirements of Variables.

2004-03-20  Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b127

	* Change: RFE [ 879339 ] Import image title/description by CSV file
	* Change: Added ability to caption new images based on file datestamps
		Forum topic: Large Imports use file time/date for description

2004-03-18  Chris Kelly <ckdake@users.sf.net> 1.4.3-cvs-b126

	* Change:  More typos thanks to h0bbel.  This version bump
		includes several commits from earlier today.
		
	* Bugfix: Moved code for defining $webserver_user from 
		setup/index.php to setup/config_data.inc. 
		$webserver_user is only used in config_data.inc 