@@ -127,7 +127,7 @@ $myAlbum->load($id);
 <p>
 <?php echo makeFormIntro("delete_photo.php"); ?>
 <input type="hidden" name="id" value="<?php echo $id?>">
-<input type="hidden" name="id2" value="<?php echo $id2 ?>">    
+<input type="hidden" name="nextId" value="<?php echo $nextId ?>">    
 <input type="submit" name="confirm" value="<?php echo _("Delete") ?>">
 <input type="button" name="cancel" value="<?php echo _("Cancel") ?>" onclick='parent.close()'>
 </form>
