@@ -1,10 +1,17 @@
-2004-03-20 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b133
+2004-03-21  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b134
+
+	* Change: Fix 'out of bounds' errors resulting from the index 
+	  changes for deleting images.
+
+	* Change: Fix redirect typo/bug in delete_photo
+
+2004-03-21 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b133
 
 	* Bugfix: Allow users to have blank captions on upload.  This
 		broke when the ability to caption from file date stamp
 		was added.
 
-2004-03-20 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b132
+2004-03-21 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b132
 
 	* Change: Task #84759, Patch #781169, RFE #411261. Add watermarking
 		support (visible watermarks by overlaying an image)
